chore: use monorepo

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-  "root": true,
-  "extends": ["eslint:recommended", "prettier"],
-  "env": {
-    "es2022": true,
-    "node": true
-  },
-  "parserOptions": {
-    "ecmaVersion": "latest"
-  }
+  "extends": ["custom"]
 }
