--- a/packages/typescript-config-custom/package.json
+++ b/packages/typescript-config-custom/package.json
@@ -2,9 +2,7 @@
   "name": "typescript-config-custom",
   "version": "0.0.0",
   "private": true,
-  "files": [
-    "base.json"
-  ],
+  "main": "index.json",
   "devDependencies": {
     "typescript": "^4.9.4"
   },
