--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,12 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^1.9.0"
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/solid-js": "^1.2.3",
+    "@astrojs/tailwind": "^2.1.3",
+    "astro": "^1.9.0",
+    "solid-js": "^1.6.7",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "typescript-config-custom": "workspace:^0.0.0"
