--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "typescript-config-custom/index.json",
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "jsxImportSource": "solid-js"
   }
 }
