--- a/docs/package.json
+++ b/docs/package.json
@@ -11,9 +11,11 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
+    "@babel/core": "^7.20.7",
     "astro": "^1.9.0",
     "solid-js": "^1.6.7",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-radix-colors": "workspace:^0.1.0"
   },
   "devDependencies": {
     "typescript-config-custom": "workspace:^0.0.0"
