--- a/docs/package.json
+++ b/docs/package.json
@@ -12,12 +12,15 @@
     "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
     "@babel/core": "^7.20.7",
+    "@tailwindcss/typography": "^0.5.8",
     "astro": "^1.9.0",
+    "solid-icons": "^1.0.4",
     "solid-js": "^1.6.7",
     "tailwindcss": "^3.2.4",
     "tailwindcss-radix-colors": "workspace:^0.1.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "typescript-config-custom": "workspace:^0.0.0"
   }
 }
