--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
     "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
     "@babel/core": "^7.20.7",
+    "@fontsource/inter": "^4.5.14",
     "@tailwindcss/typography": "^0.5.8",
     "astro": "^1.9.0",
     "solid-icons": "^1.0.4",
